<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="80dp"
    android:background="@color/background">

    <View
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/subtext"/>

    <View
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/subtext"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/avt"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/avt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="24dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Material3.Button"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/avt"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="28dp">
        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/demonstrate_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/avt"
            android:textColor="@color/foreground"
            android:textSize="20sp"
            android:fontFamily="@string/font"/>
        <TextView
            android:id="@+id/job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demonstrate_text"
            android:textSize="12sp"
            android:textColor="@color/subtext"
            android:fontFamily="@string/subtext_font"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>